# config/churchSwagger.json
@@ -122,16 +122,7 @@
             "type": "string",
             "value": ""
           },
-          {
-            "name": "valueStatement",
-            "in": "formData",
-            "description": "Enter value statement picture to upload",
-            "required": false,
-            "type": "file",
-            "format": "binary",
-            "maxLength": 5242880,
-            "allowedMimeTypes": ["image/jpeg", "image/png"]
-          },
+       
           {
             "name": "maritalStatus",
             "in": "formData",
@@ -221,6 +212,16 @@
             "name": "companyLogo",
             "in": "formData",
             "description": "Enter company logo picture to upload",
+            "required": false,
+            "type": "file",
+            "format": "binary",
+            "maxLength": 5242880,
+            "allowedMimeTypes": ["image/jpeg", "image/png"]
+          },
+          {
+            "name": "valueStatement",
+            "in": "formData",
+            "description": "Enter value statement picture to upload",
             "required": false,
             "type": "file",
             "format": "binary",
